<resources>
    <string name="app_name">Pet_Universe</string>
    <string name="title_home">Buy</string>
    <string name="title_seller_view">Sell</string>
    <string name="title_chat">Chat</string>
    <string name="title_accounts">My Account</string>
    <string name="live_pets_description">All pets in one place</string>
    <string name="food_description">All pet food in one place</string>
    <string name="accessories_description">All pet accessories in one place</string>
    <string name="other_description">All other pet related items in one place</string>

    <!--  Seller Listings  -->
    <string-array name="seller_category_spinner_entries">
        <item>Live Pets</item>
        <item>Pet Food</item>
        <item>Pet Accessories</item>
        <item>Other</item>
    </string-array>
    <string-array name="seller_type_spinner_entries">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Other</item>
    </string-array>

    <!--  Live Pet Filters  -->
    <string-array name="live_pets_pet_filter_spinner_entries">
        <item>All</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Other</item>
    </string-array>
    <!--    <string-array name="live_pets_age_filter_spinner_entries">-->
    <!--        <item>All</item>-->
    <!--        <item>Newborn (Less than 1 year)</item>-->
    <!--        <item>Young (1–3 years)</item>-->
    <!--        <item>Adult (3–8 years)</item>-->
    <!--        <item>Senior (More than 8 years)</item>-->
    <!--    </string-array>-->
    <string-array name="live_pets_price_filter_spinner_entries">
        <item>All</item>
        <item>$0 (Free)</item>
        <item>More than $0 - $50</item>
        <item>$51 - $100</item>
        <item>$101 - $200</item>
        <item>$201 - $500</item>
        <item>More than $500</item>
    </string-array>
    <string-array name="live_pets_location_filter_spinner_entries">
        <item>All</item>
        <item>Within 10km</item>
        <item>Within 25km</item>
        <item>Within 50km</item>
        <item>Within 100km</item>
    </string-array>

</resources>