<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/livePetsImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circular_shape"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:layout_marginBottom="24dp"
        android:src="@drawable/live_pets_logo"
        android:backgroundTint="@color/purple_700"
        app:tint="@color/white"
        android:contentDescription="@string/live_pets_description" />

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circular_shape"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:layout_marginBottom="24dp"
        android:src="@drawable/pet_food_logo"
        android:backgroundTint="@color/purple_700"
        app:tint="@color/white"
        android:contentDescription="@string/food_description" />

    <ImageView
        android:id="@+id/accessoriesImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circular_shape"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:src="@drawable/pet_accessories_logo"
        android:backgroundTint="@color/purple_700"
        app:tint="@color/white"
        android:contentDescription="@string/accessories_description" />
</LinearLayout>
