<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pet_universe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_navigation_home_to_livePetsFragment"
        app:destination="@id/livePetsFragment" />
        </fragment>

        <fragment
        android:id="@+id/livePetsFragment"
        android:name="com.example.pet_universe.ui.livePets.LivePetsFragment"
        android:label="Live Pets"
        tools:layout="@layout/fragment_live_pets" >
            <action
                android:id="@+id/action_livePetsFragment_to_individualPetFragment"
                app:destination="@id/individualPetFragment" />
        </fragment>

    <fragment
        android:id="@+id/individualPetFragment"
        android:name="com.example.pet_universe.ui.livePets.IndividualPetFragment"
        android:label="Individual Pet"
        tools:layout="@layout/fragment_individual_pet" />

    <fragment
        android:id="@+id/navigation_seller"
        android:name="com.example.pet_universe.ui.sellerView.SellerViewFragment"
        android:label="@string/title_seller_view"
        tools:layout="@layout/fragment_seller" />

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.example.pet_universe.ui.accountSettings.AccountSettingsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

    <action
        android:id="@+id/action_global_to_accountSettings"
        app:destination="@id/navigation_accounts" />

</navigation>