<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="56dp"> <!-- Compensating for navigation bar height -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                layout="@layout/layout_profile_icon"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <!-- First Image and Title -->
        <ImageView
            android:id="@+id/livePetsImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circular_shape"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:layout_marginBottom="8dp"
            android:src="@drawable/live_pets_logo"
            android:backgroundTint="@color/purple_700"
            app:tint="@color/white"
            android:contentDescription="@string/live_pets_description" />

        <TextView
            android:id="@+id/livePetsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Live Pets"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="24dp" />

        <!-- Second Image and Title -->
        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circular_shape"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:layout_marginBottom="8dp"
            android:src="@drawable/pet_food_logo"
            android:backgroundTint="@color/purple_700"
            app:tint="@color/white"
            android:contentDescription="@string/food_description" />

        <TextView
            android:id="@+id/foodTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pet Food"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="24dp" />

        <!-- Third Image and Title -->
        <ImageView
            android:id="@+id/accessoriesImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circular_shape"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:layout_marginBottom="8dp"
            android:src="@drawable/pet_accessories_logo"
            android:backgroundTint="@color/purple_700"
            app:tint="@color/white"
            android:contentDescription="@string/accessories_description" />

        <TextView
            android:id="@+id/accessoriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pet Accessories"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="24dp" />

    </LinearLayout>

</ScrollView>
